[tool.poetry]
name = "astro-dodge"
version = "0.1.0"
description = "Tracking NEO"
authors = ["Kevin <kev.chu.pro@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
black = "^23.1.0"
attrs = "22.2.0"
cattrs = "22.2.0"
certifi = "2022.12.7"
charset-normalizer = "3.0.1"
click = "8.1.3"
Flask = "2.2.3"
Flask-SQLAlchemy = "3.0.3"
Flask-WTF = "1.1.1"
greenlet = "2.0.2"
gunicorn = "20.1.0"
idna = "3.4"
iniconfig = "2.0.0"
itsdangerous = "2.1.2"
Jinja2 = "3.1.2"
MarkupSafe = "2.1.2"
packaging = "23.0"
platformdirs = "3.1.0"
pluggy = "1.0.0"
pytest = "7.2.1"
requests = "2.28.2"
requests-cache = "1.0.0"
six = "1.16.0"
SQLAlchemy = "2.0.5.post1"
typing-extensions = "4.5.0"
url-normalize = "1.4.3"
urllib3 = "1.26.14"
Werkzeug = "2.2.3"
WTForms = "3.0.1"
psycopg2-binary = "^2.9.5"
redis = "^4.5.2"
Flask-Login = "^0.6.2"
email-validator = "^1.3.1"
python-dotenv = "^1.0.0"
pytest-cov = "^4.0.0"
Flask-DebugToolbar = "^0.13.1"
pylint = "^2.17.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
